--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseWorld</title>
     <link rel="icon" href="images/logo wed.jpg">
-    <link rel="stylesheet" href="NguyenPhucThinh.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Home -->
@@ -20,16 +22,16 @@
                         <nav class="navbar">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="#home" class="nav-links underline active">Home</a>
+                                    <a href="index.html" class="nav-links underline active">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#services" class="nav-links underline">Services</a>
+                                    <a href="services.html" class="nav-links underline">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="NguyenPhucThinh_about.html" class="nav-links underline">About</a>
+                                    <a href="about.html" class="nav-links underline">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#contact" class="nav-links underline">Contact Us</a>
+                                    <a href="contact.html" class="nav-links underline">Contact Us</a>
                                 </li>
                             </ul>
                         </nav>
@@ -151,8 +153,9 @@
                         </figure>
                         <h1 class="features-title">Our Properties</h1>
                         <p class="features-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia 
-                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae quam tenetur et iusto optio suscipit hic?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia
+                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae
+                            quam tenetur et iusto optio suscipit hic?
                         </p>
                         <a class="features-links underline" href="#">Learn More</a>
                     </li>
@@ -162,8 +165,9 @@
                         </figure>
                         <h1 class="features-title">Property for Sale</h1>
                         <p class="features-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia 
-                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae quam tenetur et iusto optio suscipit hic?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia
+                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae
+                            quam tenetur et iusto optio suscipit hic?
                         </p>
                         <a class="features-links underline" href="#">Learn More</a>
                     </li>
@@ -173,8 +177,9 @@
                         </figure>
                         <h1 class="features-title">Real Estate Agent</h1>
                         <p class="features-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia 
-                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae quam tenetur et iusto optio suscipit hic?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia
+                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae
+                            quam tenetur et iusto optio suscipit hic?
                         </p>
                         <a class="features-links underline" href="#">Learn More</a>
                     </li>
@@ -184,8 +189,9 @@
                         </figure>
                         <h1 class="features-title">House for Sale</h1>
                         <p class="features-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia 
-                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae quam tenetur et iusto optio suscipit hic?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet magni officiis mollitia
+                            tempora possimus voluptate eligendi, voluptatibus vitae molestias quos recusandae beatae
+                            quam tenetur et iusto optio suscipit hic?
                         </p>
                         <a class="features-links underline" href="#">Learn More</a>
                     </li>
@@ -210,15 +216,21 @@
                             <h1 class="contact-name">James Doe</h1>
                             <p class="contact-title">Real Estate Agent</p>
                             <p class="contact-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto. Dolor, 
-                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore assumenda 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto.
+                                Dolor,
+                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore
+                                assumenda
                                 itaque quibusdam dignissimos corrupti! Iusto!
                             </p>
                             <div class="contact-wrapper">
-                                <a href="#" class="contact-links"><i class="icon-links--twitter ri-twitter-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--facebook ri-facebook-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--linkedin ri-linkedin-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--instagram ri-instagram-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--twitter ri-twitter-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--facebook ri-facebook-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--linkedin ri-linkedin-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--instagram ri-instagram-fill"></i></a>
                             </div>
                         </div>
                     </li>
@@ -228,15 +240,21 @@
                             <h1 class="contact-name">Jean Smith</h1>
                             <p class="contact-title">Real Estate Agent</p>
                             <p class="contact-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto. Dolor, 
-                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore assumenda 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto.
+                                Dolor,
+                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore
+                                assumenda
                                 itaque quibusdam dignissimos corrupti! Iusto!
                             </p>
                             <div class="contact-wrapper">
-                                <a href="#" class="contact-links"><i class="icon-links--twitter ri-twitter-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--facebook ri-facebook-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--linkedin ri-linkedin-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--instagram ri-instagram-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--twitter ri-twitter-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--facebook ri-facebook-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--linkedin ri-linkedin-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--instagram ri-instagram-fill"></i></a>
                             </div>
                         </div>
                     </li>
@@ -246,15 +264,21 @@
                             <h1 class="contact-name">Alicia Huston</h1>
                             <p class="contact-title">Real Estate Agent</p>
                             <p class="contact-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto. Dolor, 
-                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore assumenda 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, inventore architecto.
+                                Dolor,
+                                ab reiciendis modi, cupiditate maxime quaerat eligendi rem ipsa velit ratione dolore
+                                assumenda
                                 itaque quibusdam dignissimos corrupti! Iusto!
                             </p>
                             <div class="contact-wrapper">
-                                <a href="#" class="contact-links"><i class="icon-links--twitter ri-twitter-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--facebook ri-facebook-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--linkedin ri-linkedin-fill"></i></a>
-                                <a href="#" class="contact-links"><i class="icon-links--instagram ri-instagram-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--twitter ri-twitter-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--facebook ri-facebook-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--linkedin ri-linkedin-fill"></i></a>
+                                <a href="#" class="contact-links"><i
+                                        class="icon-links--instagram ri-instagram-fill"></i></a>
                             </div>
                         </div>
                     </li>
@@ -317,20 +341,27 @@
                                 <li class="footer-item-2">
                                     <a href="#" class="footer-links">Vision</a>
                                 </li>
-                            </ul>  
+                            </ul>
                             <div class="footer-wrapper" style="margin-top: 10px;">
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--instagram ri-instagram-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--twitter ri-twitter-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--facebook ri-facebook-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--linkedin ri-linkedin-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--pinterest ri-pinterest-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--basketball ri-basketball-line"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--instagram ri-instagram-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--twitter ri-twitter-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--facebook ri-facebook-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--linkedin ri-linkedin-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--pinterest ri-pinterest-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--basketball ri-basketball-line"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="footer-bottom text-center">
-                    <p class="footer-bottom--links">Copyright &#169 . All Rights Reserved. - Designed by <span>Thầy Vũ</span></p>
+                    <p class="footer-bottom--links">Copyright &#169 . All Rights Reserved. - Designed by <span>Thầy
+                            Vũ</span></p>
                 </div>
             </div>
         </div>
@@ -345,5 +376,6 @@
     </a>
 
 </body>
-<script src="NguyenPhucThinh.js"></script>
+<script src="index.js"></script>
+
 </html>
