--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseWorld</title>
     <link rel="icon" href="images/logo wed.jpg">
-    <link rel="stylesheet" href="NguyenPhucThinh.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Home -->
@@ -20,16 +22,16 @@
                         <nav class="navbar">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="NguyenPhucThinh.html" class="nav-links underline active">Home</a>
+                                    <a href="index.html" class="nav-links underline active">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="NguyenPhucThinh.html #services" class="nav-links underline">Services</a>
+                                    <a href="services.html" class="nav-links underline">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#about" class="nav-links underline">About</a>
+                                    <a href="about.html" class="nav-links underline">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="NguyenPhucThinh.html #contact" class="nav-links underline">Contact Us</a>
+                                    <a href="contact.html" class="nav-links underline">Contact Us</a>
                                 </li>
                             </ul>
                         </nav>
@@ -100,7 +102,8 @@
                     <div class="about-information--item">
                         <div class="about-information--bg">
                             <div class="about-wrapper">
-                                <a class="about-information--links" href="#"><i class="about-information--icon ri-map-pin-2-fill"></i></a>
+                                <a class="about-information--links" href="#"><i
+                                        class="about-information--icon ri-map-pin-2-fill"></i></a>
                                 <div>
                                     <h1 class="about-information--title">Location</h1>
                                     <p class="about-text">
@@ -109,7 +112,8 @@
                                 </div>
                             </div>
                             <div class="about-wrapper">
-                                <a class="about-information--links" href="#"><i class="about-information--icon ri-time-line"></i></a>
+                                <a class="about-information--links" href="#"><i
+                                        class="about-information--icon ri-time-line"></i></a>
                                 <div>
                                     <h1 class="about-information--title">Open Hours</h1>
                                     <p class="about-text">
@@ -119,7 +123,8 @@
                                 </div>
                             </div>
                             <div class="about-wrapper">
-                                <a class="about-information--links" href="#"><i class="about-information--icon ri-mail-fill"></i></a>
+                                <a class="about-information--links" href="#"><i
+                                        class="about-information--icon ri-mail-fill"></i></a>
                                 <div>
                                     <h1 class="about-information--title">Email</h1>
                                     <p class="about-text">
@@ -128,7 +133,8 @@
                                 </div>
                             </div>
                             <div class="about-wrapper">
-                                <a class="about-information--links" href="#"><i class="about-information--icon ri-phone-fill"></i></a>
+                                <a class="about-information--links" href="#"><i
+                                        class="about-information--icon ri-phone-fill"></i></a>
                                 <div>
                                     <h1 class="about-information--title">Call</h1>
                                     <p class="about-text">
@@ -145,7 +151,8 @@
                                 <input class="input-field" type="text" placeholder="Your Email" name="email" required>
                             </div>
                             <input class="input-field" type="text" placeholder="Subject" name="subject" required>
-                            <textarea class="input-field" name="message" id="" placeholder="Message" required></textarea>
+                            <textarea class="input-field" name="message" id="" placeholder="Message"
+                                required></textarea>
                             <button class="btn">Send Message</button>
                         </form>
                     </div>
@@ -208,20 +215,27 @@
                                 <li class="footer-item-2">
                                     <a href="#" class="footer-links">Vision</a>
                                 </li>
-                            </ul>  
+                            </ul>
                             <div class="footer-wrapper" style="margin-top: 10px;">
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--instagram ri-instagram-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--twitter ri-twitter-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--facebook ri-facebook-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--linkedin ri-linkedin-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--pinterest ri-pinterest-fill"></i></a>
-                                <a href="#" class="footer-icon--links"><i class="footer-icon--basketball ri-basketball-line"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--instagram ri-instagram-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--twitter ri-twitter-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--facebook ri-facebook-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--linkedin ri-linkedin-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--pinterest ri-pinterest-fill"></i></a>
+                                <a href="#" class="footer-icon--links"><i
+                                        class="footer-icon--basketball ri-basketball-line"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="footer-bottom text-center">
-                    <p class="footer-bottom--links">Copyright &#169 . All Rights Reserved. - Designed by <span>Thầy Vũ</span></p>
+                    <p class="footer-bottom--links">Copyright &#169 . All Rights Reserved. - Designed by <span>Thầy
+                            Vũ</span></p>
                 </div>
             </div>
         </div>
@@ -234,5 +248,6 @@
         <i class="back-top--icon ri-arrow-up-s-line"></i>
     </a>
 </body>
-<script src="NguyenPhucThinh.js"></script>
+<script src="index.js"></script>
+
 </html>
